# pplmonad-mirror

./: LICENSE  README.md  Setup.hs  pplmonad.cabal  stack.yaml
_darcs/: hashed_inventory
_darcs/patches/: 0000000256-8f5a12b8d7b46715bda8c365442ea8f8b138e49ca11c053a24654d0de9e55fcc  0000000316-922f4dffee0d9202f769550e8120a4bbd76dddb359005e2be58c263a92f7f2bb  0000000402-04440151ac9cf33d6edd61470e4430dd51584cfe8bbf587a69459786dfd8f355  0000000472-452fac64536fe83fca01c96a5bf6e46d43b919dcc23b428c9bb83fc9339009ea  0000000480-31f847a5e10a6a6ae41eb1b6ee7f00d0818e2fdebc0af8b8c8a2c0beb57dca90  0000000493-07ac8dd376269a40e07c96bfe94296a53ba5b880af6c5c941af88225877f2782  0000000562-3334bf80b577c5aa96b2344fb00330bd5f49fb078aebc4edae029ab97e892d95  0000000862-0d8f5814c38cc29a5521a018a0e700bbf1699a544a67af4b91b35ce717289fb4  0000000942-576d00409479eb1b31f39fc780992bd99df71f9c86e29bf71a64f428d740490e  0000001108-19113c449927691c915a685cad7b4f501fb02906e352d94e0b9c7e21c1ad4c68  0000001148-143fe8e182dda4c3aa18c648cf96b3502d0520ea0e72845c443af8690329b016  0000001221-e4416b6735e8b8c0a1da9a8174a69249291cadcaa30452b3dc4ac77e4210e39c  0000001243-2b84ba2110ada8a15461706e5ca5c7f0e6665e8c16ebb7d61fbff136355882f3  0000001316-9c724d8d6e2d89712e1ac40ebea6dd7fb9eac7d9dbcb3d0322ad860f202f08f3  0000001399-8675d62bafcc5325cff31947b530fb19eb85a5bd8bbd5abfe4af74f4243bbffd  0000001434-a6ca20491e2144016790bd7bd9f394da2120bd4ebe492cc4871f62e32eecf56e  0000001723-6801d8d031038591f633984a3d63e7a4ffa9d2d62d69478a000a3ab0aca1819a  0000002141-224cfe017fd8f1615e9e775f94ad35d3a272e381f08cfd77660342a2e18d6477  0000002210-5116f24fced248c6d816d1e23059b996630a027c9a234f4dca69ddf8556f542d  0000002312-b7f3f58a542e1649777511fd09f7e88094e3e32a45c3ff44ea7db58c6c81394d  0000002328-037a4280991bb9e111b10d32ffa265b91b4163efda985d29a2cde0eb269becdf  0000002363-84e1ccd9b8009f07c2c70bc5546d910797eb66116144e76cfaa813b4acd09192  0000002494-9a65252af431acd6cb9b8567eae8e0a58af0b2fe93d099f36da00cbe28bf9365  0000002515-ce1565c6b4a2755ed3b58dc7fcba7ea84d9d5b8473cc203f0559d3a2c0c4aadf  0000002675-3068f2f7be64dc954fe4e1d5573c76987da17a01e1a43f912f6f7be95058402f  0000002743-a352cfeff8fe87e4fee722be531d2edbe8755689564cb70a245d4507e09ac9ca  0000002859-94f16e23349ef33fdd220e8b1e8b14cc59bd2d838b2e8c9a9f7070128632b4fb  0000002861-1ccc066549bfb1a47397d6e47915e058d8d3bb5cf7543c7f4c5f293977e0b800  0000003127-5420964c47d4fe4f6f367b1db6582883f0cfdf39b7e1a46389877a952c9ba4d4  0000003144-0b79eb150b222e2fcdf1a12e21e15f07ea87da3837f150f3d7b1085209d47071  0000003211-49a8a55183d6613c5ed6a81563f03ffe5de7a3c34d4142777229228f841cbd45  0000003249-d9042923f772a1e844f82f9cdc365ff1f0dbf7d7d48e666a18b0cef0e7107595  0000003456-2016c6f6e98c3e8fc39499bf02255f8bfdfcd3b0281c9561bfce22eb62a01964  0000003624-c3f43723a551069d2de162951e7a38e8ccb323b6c6641ddb1a093fac6c5f270f  0000003678-dc653539a3bc7438888f494a08eff5420f984962933a1b9e9b67195e24bcef3f  0000003901-30fbcfa966bd223087b1236f8ff7681d65e31c6d7a4c954f812b1155594d6bb0  0000004036-85b258fe3d35e2c630c90b97c4f014821153ead1ecb7480dd345e9bcf5c8398f  0000004239-e19c689154b836dadccfb7d0f0e8dd6f35975c25e2ba48e1616caac0a9be556f  0000004293-d877555809d346308cff109611d99f705fecf4bcfeb2ed3adc426d8087f6fbda  0000004317-3d625020240824139ba3d33f43292b2e290a9317ef9130f592ad26e7749d2e4d  (+78 more)
_darcs/prefs/: defaultrepo  sources
src/: Activity.hs  Battle.hs  Controls.hs  ControlsMaps.hs  Ending.hs  Field.hs  Intro.hs  LabelName.hs  Lightarrow.hs  Main.hs  MainAutomaton.hs  Menu.hs  Message.hs  MusicName.hs  OfflineData.hs  Output.hs  ProseName.hs  SoundName.hs  SpriteName.hs  StateClass.hs  Teletype.hs  TextBox.hs  TextUtil.lhs  TileName.hs  Tuner.hs
src/Battle/: Activity.hs  Anchor.hs  ElementalEffect.hs  MoveName.hs  Moves.hs  Moves.hs-boot  Output.hs  Parameters.hs  Parameters.hs-boot  Vignette.hs
src/Battle/Moves/: EyePoke.hs  MeToo.hs  SuckerPunch.hs
src/Field/: Activity.hs  Anchor.hs  Avatar.hs  Battles.hs  CardinalDirection.hs  Character.hs  Character.hs-boot  Editor.hs  Editor.hs-boot  Locale.hs  MapName.hs  Menu.hs  Output.hs  Parameters.hs  Parameters.hs-boot  PersonaName.hs  Personae.hs  Personae.hs-boot  Scripts.hs  Terrain.hs  Terrain.hs-boot  TerrainElementExpression.hs  TerrainElements.hs  TerrainElements.hs-boot  Trainer.lhs
src/Field/Personae/: Donald.hs  Kid.hs  Leaner.hs  Man.hs  Mom.hs  Protagonist.hs  Woke.hs
src/Field/Scripts/: Ditfy.hs  (+6 more)
src/Inventory/: Menu.hs  Parameters.hs
src/Output/: Window.lhs
src/Ppmn/: Menu.hs  Output.hs  Parameters.hs  Species.hs
(+12 files in other folders)
