name:                pplmonad
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              David Alexander Stuart
maintainer:          example@example.com
copyright:           2017 David Alexander Stuart
category:            Web
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  README.md

custom-setup
  setup-depends: base >= 4.9 && < 5
               , Cabal
               , cabal-macosx

executable Peoplemon
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       array,
                       base >= 4.7 && < 5,
                       containers,
                       executable-path,
                       filepath,
                       mtl,
                       random,
                       sdl2,
                       sdl2-image,
                       sdl2-mixer,
                       text,
                       time,
                       Yampa
  other-modules:       Activity
                       Battle
                       Battle.Activity
                       Battle.Anchor
                       Battle.ElementalEffect
                       Battle.MoveName
                       Battle.Moves
                       Battle.Moves.EyePoke
                       Battle.Moves.MeToo
                       Battle.Moves.SuckerPunch
                       Battle.Output
                       Battle.Parameters 
                       Battle.Vignette
                       Controls
                       ControlsMaps
                       Ending
                       Field
                       Field.Activity
                       Field.Anchor
                       Field.Avatar
                       Field.Battles
                       Field.CardinalDirection
                       Field.Character
                       Field.Trainer
                       Field.Editor
                       Field.Locale
                       Field.MapName
                       Field.Menu
                       Field.Output
                       Field.Parameters
                       Field.Personae
                       Field.PersonaName
                       Field.Personae.Donald
                       Field.Personae.Kid
                       Field.Personae.Leaner
                       Field.Personae.Man
                       Field.Personae.Mom
                       Field.Personae.Protagonist
                       Field.Personae.Woke
                       Field.Scripts
                       Field.Scripts.BossRoom
                       Field.Scripts.Courtyard
                       Field.Scripts.Ditfy
                       Field.Scripts.Hometown
                       Field.Scripts.FamilyHouse1F
                       Field.Scripts.FamilyHouse2F
                       Field.Scripts.WeWoke
                       Field.Terrain
                       Field.TerrainElementExpression
                       Field.TerrainElements
                       Field.TerrainElements.Basic
                       Field.TerrainElements.Exhibit
                       Field.TerrainElements.Habitat
                       Field.TerrainElements.Portal
                       Intro
                       Inventory.Items.Booch
                       Inventory.Items.PPhone
                       Inventory.Menu
                       Inventory.Parameters
                       LabelName
                       Lightarrow
                       MainAutomaton
                       Menu
                       Message
                       MusicName
                       OfflineData
                       Output
                       Output.Window
                       Ppmn.Menu
                       Ppmn.Output
                       Ppmn.Parameters
                       Ppmn.Species
                       Ppmn.Species.Blamotage
                       Ppmn.Species.Ignoloof
                       Ppmn.Species.Incub
                       Ppmn.Species.Slidek
                       Ppmn.Species.Unner
                       Ppmn.Species.You
                       ProseName
                       SoundName
                       SpriteName
                       StateClass
                       Teletype
                       TextBox
                       TextUtil
                       TileName
